--- a/main.ipynb
+++ b/main.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,12 +39,16 @@
    "source": [
     "## Prelucrarea datelor\n",
     "\n",
-    "1. Setul de date"
+    "1. Setul de date\n",
+    "\n",
+    "Setul de date prevede mai multe coloane pentru a oferi o prespectivă mai largă pentru înțelegerea acestuia.\n",
+    "\n",
+    "În cazul de față de interese sunt coloanele „Question” și „Answer”."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -112,27 +116,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train:3420\n",
+      "Train:2203\n",
       "Text curatat:\n",
-      "0       was abraham lincoln the sixteenth president of...\n",
-      "2           did lincoln sign the national banking act of \n",
-      "4                         did his mother die of pneumonia\n",
-      "6             how many long was lincolns formal education\n",
-      "8             when did lincoln begin his political career\n",
+      "0       [abraham, lincoln, sixteenth, president, unite...\n",
+      "2                 [lincoln, sign, national, banking, act]\n",
+      "4                                [mother, die, pneumonia]\n",
+      "6                [many, long, lincoln, formal, education]\n",
+      "8                     [lincoln, begin, political, career]\n",
       "                              ...                        \n",
-      "3988                                   what do zebras eat\n",
-      "3990                           what are zebras hunted for\n",
-      "3992              what areas do the grevys zebras inhabit\n",
-      "3994    which species of zebra is known as the common ...\n",
-      "3996                        at what age can a zebra breed\n",
-      "Name: Question, Length: 2203, dtype: object\n"
+      "3988                                         [zebra, eat]\n",
+      "3990                                        [zebra, hunt]\n",
+      "3992                       [area, grevys, zebra, inhabit]\n",
+      "3994                 [specie, zebra, know, common, zebra]\n",
+      "3996                                  [age, zebra, breed]\n",
+      "Name: Question, Length: 2148, dtype: object\n"
      ]
     }
    ],
@@ -165,12 +169,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Curatarea textului - Lemmatizarea textului"
+    "3. Curatarea textului - Lemmatizarea textului\n",
+    "\n",
+    "Lemmatizarea presupune eliminarea eventoalelor constructii sufixate sau prefixate pentru a aduce cuvântul la forma lui de bază.\n",
+    "\n",
+    "Scopul utilizării este:\n",
+    "\n",
+    "- uniformizare, cuvintele cu acceași rădăcină sunt tratate ca echivalente;\n",
+    "- reducerea dimensionalității;\n",
+    "- îmbunătățirea căutării/ comparării."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -281,30 +293,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. Word Embedding"
+    "4. Word Embedding\n",
+    "\n",
+    "Word Embeddings sunt reprezentări numerice ale cuvintelor într-un spațiu dimensional mai mic pentru a capta informația semantică și sintactică.\n",
+    "\n",
+    "Word Embedding este o abordare pentru reprezentarea cuvintelor și a documentelor.\n",
+    "Word Embedding sau Word Vector este un vector numeric pentru a reprezenta un cuvânt într-un spațiu dimensional mai mic.\n",
+    "\n",
+    "În cazul de față am ales o abordare bazată pe Contextualized Word Embeddings, mai precis BERT.\n",
+    "\n",
+    "BERT este un model transformer care învață încorporări contextuale pentru cuvinte. Consideră întregul context al unui cuvânt ceea ce oferă o informație contextuală mai bogată decât dacă se folosesc frequency based embeddings, TF-IDF, sau prediction based word embedding, Word2Vec."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-0.0072,  0.0577, -0.0110,  ..., -0.0146, -0.0587,  0.0282],\n",
-      "        [-0.0099, -0.0138, -0.0911,  ..., -0.0242, -0.0420, -0.0109],\n",
-      "        [ 0.0005, -0.0069,  0.0078,  ..., -0.0506,  0.0968,  0.0091],\n",
-      "        ...,\n",
-      "        [-0.0427,  0.0400, -0.0233,  ...,  0.0435,  0.0533,  0.0033],\n",
-      "        [-0.0986,  0.0236, -0.0243,  ...,  0.0413,  0.0767,  0.0150],\n",
-      "        [-0.1055,  0.0927, -0.0029,  ...,  0.0076,  0.1137, -0.0036]])\n"
+      "[[-0.00719016  0.0577301  -0.01099544 ... -0.01460441 -0.05865231\n",
+      "   0.02819466]\n",
+      " [-0.00987572 -0.01382468 -0.09109937 ... -0.02423994 -0.04201196\n",
+      "  -0.01090215]\n",
+      " [ 0.00048814 -0.00686363  0.0077758  ... -0.05062495  0.09680961\n",
+      "   0.00913441]\n",
+      " ...\n",
+      " [-0.04268538  0.03998202 -0.02327148 ...  0.04347909  0.05327745\n",
+      "   0.00329734]\n",
+      " [-0.09858818  0.02357402 -0.02428912 ...  0.04131453  0.07671772\n",
+      "   0.01495439]\n",
+      " [-0.10551791  0.09273266 -0.00291227 ...  0.0076475   0.1136751\n",
+      "  -0.00361189]]\n"
      ]
     }
    ],
    "source": [
-    "from sentence_transformers import SentenceTransformer, util\n",
+    "from sentence_transformers import SentenceTransformer\n",
     "\n",
     "# reconstruire intrebari ca string\n",
     "data[\"QuestionText\"] = data[\"Question\"].apply(lambda tokens: \" \".join(tokens))\n",
@@ -313,7 +340,7 @@
     "\n",
     "questions = data[\"QuestionText\"].tolist()\n",
     "answers = data[\"Answer\"].tolist()\n",
-    "question_embeddings = model.encode(questions, convert_to_tensor=True)\n",
+    "question_embeddings = model.encode(questions, convert_to_numpy=True)\n",
     "\n",
     "print(question_embeddings)\n"
    ]
@@ -327,31 +354,57 @@
     "Se testează mai multe funcții pentru similaritate mai bună pentru întrebări\n",
     "\n",
     "- cosine_similarity\n",
+    "\n",
+    "$$\n",
+    "\\mathrm{sim(X, Y)} = \\frac{\\sum_{i = 1}^{k} X_i * Y_i}{\\sqrt{\\sum_{i = 1}^{k} X_i^2} \\sqrt{\\sum_{i = 1}^{k} Y_i^2}}\n",
+    "$$\n",
+    "\n",
+    "Cosine_similarity măsoară cosinusul unghiului dintre doi vectori în spațiu. În cazul prelucării de texx, este o metrică care nu este afectată de frecvența cuvintelor care apar în documente și este eficientă pentru a compara documente de diferite dimensiuni.\n",
+    "\n",
+    "Este o metrică care nu este afectată de lungimea textului. Textele asimetrice pot avea un unghi mai mic între ele. Cu cât unghiul este mai mic cu atât similaritatea este mai mare. De asemenea, cosinusul are domeniul cuprins între `[-1, 1]`, iar din perspectiva NLP-urilor, valorile sunt cuprinse între `[0, 1]`. Dacă un cuvânt nu apare, atunci fracția devine 0.\n",
+    "\n",
     "- distanta euclidiana\n",
-    "- produsul vectorial"
+    "\n",
+    "$$\n",
+    "\\mathrm{sim(X, Y) = \\frac{1}{1 + \\sqrt{\\sum_{i = 1}^{k} (X_i - Y_i)^2}}}\n",
+    "$$\n",
+    "\n",
+    "Distanța euclidiană reprezintă lungimea unui segment de dreaptă dintre două puncte. În cazul NLP-urilor, aceste puncte reprezintă cuvinte.\n",
+    "\n",
+    "Cu cât distanța dintre două texte este mai mică, cu atât mai similare sunt acestea. Principala problemă cu această metrică este că lungimea textului afectează rezultatul. Propozițiile mai lungi tind să aibă un scor mai mare comparativ cu cele mai scurte.\n",
+    "\n",
+    "- produsul scalar\n",
+    "\n",
+    "$$\n",
+    "\\mathrm{sim(X, Y) = \\sum_{i = 1}^{k} X_i * Y_i}\n",
+    "$$\n",
+    "\n",
+    "Produsul scalar este o măsură de proiecție și intuitiv arată cam cât de mult un vector este orientat în direcția celuilalt.\n",
+    "\n",
+    "Va avea valori mari dacă vectorii au direcții similare și au o lungime mai mare.\n",
+    "\n",
+    "O problemă care apare, la fel ca în cazul distanței euclidiene, este că depinde de lungimea vectorilor. De aceea produsul scalar nu este recomandat decât dacă s-a aplicat normalizarea pe respectivii vectori, caz în care, produsul scalar este totuna cu cosine_similarity."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from scipy.spatial.distance import cosine, euclidean\n",
+    "from numpy.linalg import norm\n",
     "\n",
     "# inversul funcțiilor pentru a crește cu similaritatea\n",
     "\n",
     "def cosine_sim(a, b):\n",
-    "    return 1 - cosine(a, b)\n",
+    "    return (prod_scal(a, b) / (norm(a) * norm(b)))\n",
     "\n",
     "def euclidean_distance(a, b):\n",
-    "    return 1 / (1 + euclidean(a, b))\n",
+    "    return 1 / (1 + np.sqrt(prod_scal(a - b, a - b)))\n",
     "\n",
-    "def prod_vec(a, b):\n",
-    "    a = np.asarray(a)\n",
-    "    b = np.asarray(b)\n",
-    "    return np.dot(a, b)"
+    "def prod_scal(A, B):\n",
+    "    return (sum(a * b for a, b in zip(A, B)))"
    ]
   },
   {
@@ -365,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +429,7 @@
     "    sim_func = {\n",
     "        \"cosine\": cosine_sim,\n",
     "        \"euclidean\": euclidean_distance,\n",
-    "        \"prodvec\": prod_vec\n",
+    "        \"prodscal\": prod_scal\n",
     "    }.get(method)\n",
     "\n",
     "    text = u_question.lower()\n",
@@ -403,19 +456,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Input': 'How old is Abraham Lincoln?', 'Matched Question': 'old lincoln', 'Answer': 'seven', 'Score': 0.9362116456031799, 'Method': 'cosine'}\n",
-      "{'Input': 'How old is Abraham Lincoln?', 'Matched Question': 'old lincoln', 'Answer': 'seven', 'Score': 0.7368225062582663, 'Method': 'euclidean'}\n",
-      "{'Input': 'How old is Abraham Lincoln?', 'Matched Question': 'old lincoln', 'Answer': 'seven', 'Score': 0.9362116456031799, 'Method': 'prodvec'}\n",
-      "{'Input': 'Did Canada help UN peacekeeping?', 'Matched Question': 'canada help un peacekeeping effort', 'Answer': 'During the Suez Crisis of 1956, Lester B. Pearson eased tensions by proposing the inception of the United Nations Peacekeeping Force. Canada has since served in 50 peacekeeping missions, including every UN peacekeeping effort until 1989', 'Score': 0.9868932962417603, 'Method': 'cosine'}\n",
-      "{'Input': 'Did Canada help UN peacekeeping?', 'Matched Question': 'canada help un peacekeeping effort', 'Answer': 'During the Suez Crisis of 1956, Lester B. Pearson eased tensions by proposing the inception of the United Nations Peacekeeping Force. Canada has since served in 50 peacekeeping missions, including every UN peacekeeping effort until 1989', 'Score': 0.8606553143825991, 'Method': 'euclidean'}\n",
-      "{'Input': 'Did Canada help UN peacekeeping?', 'Matched Question': 'canada help un peacekeeping effort', 'Answer': 'During the Suez Crisis of 1956, Lester B. Pearson eased tensions by proposing the inception of the United Nations Peacekeeping Force. Canada has since served in 50 peacekeeping missions, including every UN peacekeeping effort until 1989', 'Score': 0.9868932962417603, 'Method': 'prodvec'}\n"
+      "{'Input': 'How old is Abraham Lincoln?', 'Matched Question': 'old lincoln', 'Answer': 'seven', 'Score': 0.9362112283706665, 'Method': 'cosine'}\n",
+      "{'Input': 'How old is Abraham Lincoln?', 'Matched Question': 'old lincoln', 'Answer': 'seven', 'Score': 0.7368225455284119, 'Method': 'euclidean'}\n",
+      "{'Input': 'How old is Abraham Lincoln?', 'Matched Question': 'old lincoln', 'Answer': 'seven', 'Score': 0.9362112283706665, 'Method': 'prodscal'}\n",
+      "{'Input': 'Did Canada help UN peacekeeping?', 'Matched Question': 'canada help un peacekeeping effort', 'Answer': 'During the Suez Crisis of 1956, Lester B. Pearson eased tensions by proposing the inception of the United Nations Peacekeeping Force. Canada has since served in 50 peacekeeping missions, including every UN peacekeeping effort until 1989', 'Score': 0.9868934154510498, 'Method': 'cosine'}\n",
+      "{'Input': 'Did Canada help UN peacekeeping?', 'Matched Question': 'canada help un peacekeeping effort', 'Answer': 'During the Suez Crisis of 1956, Lester B. Pearson eased tensions by proposing the inception of the United Nations Peacekeeping Force. Canada has since served in 50 peacekeeping missions, including every UN peacekeeping effort until 1989', 'Score': 0.8606553673744202, 'Method': 'euclidean'}\n",
+      "{'Input': 'Did Canada help UN peacekeeping?', 'Matched Question': 'canada help un peacekeeping effort', 'Answer': 'During the Suez Crisis of 1956, Lester B. Pearson eased tensions by proposing the inception of the United Nations Peacekeeping Force. Canada has since served in 50 peacekeeping missions, including every UN peacekeeping effort until 1989', 'Score': 0.986893355846405, 'Method': 'prodscal'}\n"
      ]
     }
    ],
@@ -424,13 +477,13 @@
     "\n",
     "print(best_match(\"How old is Abraham Lincoln?\", method=\"cosine\"))\n",
     "print(best_match(\"How old is Abraham Lincoln?\", method=\"euclidean\"))\n",
-    "print(best_match(\"How old is Abraham Lincoln?\", method=\"prodvec\"))\n",
+    "print(best_match(\"How old is Abraham Lincoln?\", method=\"prodscal\"))\n",
     "\n",
     "# How has Canada helped UN peacekeeping efforts? \n",
     "\n",
     "print(best_match(\"Did Canada help UN peacekeeping?\", method=\"cosine\"))\n",
     "print(best_match(\"Did Canada help UN peacekeeping?\", method=\"euclidean\"))\n",
-    "print(best_match(\"Did Canada help UN peacekeeping?\", method=\"prodvec\"))"
+    "print(best_match(\"Did Canada help UN peacekeeping?\", method=\"prodscal\"))"
    ]
   },
   {
